kustomize_api/cryptochords-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cryptochords-api-service
spec:
  type: LoadBalancer # Use NodePort or ClusterIP if you don't have a LoadBalancer provider.
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: cryptochords-api
