kustomize_api/cryptochords-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cryptochords-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: cryptochords.hemi.xyz
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: cryptochords-api-service
            port:
              number: 3000
  tls:
  - hosts:
    - cryptochords.hemi.xyz
    secretName: cryptochords-api-tls
